# xpic-py

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml  pyproject.toml  readme.md  xpic-cli.py  xpic.py
.github/workflows/: build.yaml  release.yaml  release.yml
app/: Cargo.toml  Taskfile.yaml  Tauri.toml
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs
assets/: gen_ico.py  xpic.qss
config/: __init__.py
crates/xpic/: Cargo.toml  Taskfile.yaml
crates/xpic/src/: lib.rs  main.rs  util.rs
crates/xpic/src/bing/: mod.rs
src/: bing.rs  image_util.rs  main.rs  spotlight.rs  util.rs
tools/img_conv/: __init__.py  __main__.py
wallpapers/: __init__.py  image.py  spotlight.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/locales/: en.json  zh.json
web/src/: app.css  app.svelte  main.ts
xpic/: Cargo.toml  bing.py  spotlight.py
xpic-cli/: Cargo.toml  Taskfile.yaml
xpic-cli/src/: main.rs
xpic-tauri/: .gitignore  Cargo.toml  tauri.conf.json
xpic-tauri/capabilities/: default.json
xpic-tauri/src/: lib.rs  main.rs
xpic-web/: Taskfile.yaml  bun.lockb  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
xpic-web/src/: app.css  app.svelte  app.tsx  i18n.ts  index.css  index.tsx  main.ts
xpic-web/src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-label.svelte  context-menu-radio-item.svelte  context-menu-separator.svelte  context-menu-shortcut.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
xpic/src/: bing.rs  lib.rs  spotlight.rs  util.rs
xpic/src/bing/: mod.rs  query.rs
xpic_cli/: __init__.py  __main__.py
xpic_gui/: __init__.py  __main__.py  app.py
