[tool.poetry]
name = "xpic"
version = "0.1.3"
description = "Show wallpapers from Windows Spotlight and Bing"
license = "MIT"
authors = ["fhluo <20843637+fhluo@users.noreply.github.com>"]
readme = ["readme.md", "LICENSE"]

[tool.poetry.dependencies]
python = "3.12.*"
requests = "^2.32.3"
pillow = "^10.4.0"
typer = "^0.12.3"
rich = "^13.7.0"
pyside6 = "^6.7.2"
win32mica = "^3.0"
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pyinstaller = "^6.6.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
