[project]
name = "xpic"
version = "0.2.0"
description = "Show wallpapers from Windows Spotlight and Bing"
authors = [
    { name = "fhluo", email = "20843637+fhluo@users.noreply.github.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.32.3",
    "pillow>=10.4.0",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "pyside6>=6.7.2",
    "win32mica>=3.0",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"xpic-cli" = "xpic_cli:main"
"xpic" = "xpic_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["xpic", "xpic_cli", "xpic_gui"]

[tool.ruff]
line-length = 120
