[package]
name = "xpic-tauri"
version = "0.3.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[lib]
name = "xpic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "Xpic"
path = "src/main.rs"

[dependencies]
xpic = "0.2"
tauri = { version = "2.3", features = ["protocol-asset", "config-toml"] }
tauri-plugin-shell = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-clipboard-manager = "2.2"
window-vibrancy = "0.6"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
glob = "0.3"
showfile = "0.1"
image = "0.25"
serde_json = { version = "1.0" }


[dependencies.windows]
version = "0.60"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]

[features]
custom-protocol = ["tauri/custom-protocol"]
