[package]
name = "xpic-tauri"
version = "0.2.0-alpha.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
xpic = { path = "../xpic" }
tauri = { version = "2.0.0-rc.11", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
glob = "0.3"
window-vibrancy = "0.5"
tauri-plugin-fs = "2.0.0-rc.4"
tauri-plugin-dialog = "2.0.0-rc.6"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[features]
custom-protocol = ["tauri/custom-protocol"]
