[package]
name = "xpic"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3.30"
glob = "0.3.1"
image = "0.25.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.1", features = ["full"] }
url = "2.5.2"
