[package]
name = "xpic"
version = "0.1.6"
edition = "2021"

[dependencies]
futures = "0.3"
glob = "0.3"
image = "0.25"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
url = "2.5"
