[package]
name = "xpic"
version = "0.2.0"
edition = "2024"

[dependencies]
futures = "0.3"
glob = "0.3"
image = "0.25"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
